--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-toggleable-sm navbar-light bg-light">
-  <a class="navbar-brand" href="{{site.url}}">Josh Fayer's Blog</a>
+  <a class="navbar-brand" href="{{site.url | absolute_url }}">Josh Fayer's Blog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainnav" aria-controls="mainnav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
