--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,8 +21,10 @@
         /**
         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
         *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+        /*
         var disqus_config = function () {
-        this.page.url = "{{page.url | absolute_url}}";  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
         };
         */
         (function() { // DON'T EDIT BELOW THIS LINE
@@ -33,6 +35,7 @@
         })();
         </script>
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
       </div>
     </div>
     <script id="dsq-count-scr" src="//blog-joshuafayer.disqus.com/count.js" async></script>
