--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -11,15 +11,17 @@
     {% include nav.html %}
     <div id="sectionpage">
       {% assign words = page.tag | split: '-'%}
+      {% assign border_colour = 0 %}
       <h1 class="sectionheader">{{page.tag | replace: '-', ' ' }}</h1>
       <div class="blog-list">
         {% for post in site.categories[page.tag] %}
-        <div class="post material-shadow">
+        <div class="post" style=" box-shadow: 0px 0px 12px rgba(0,0,0,0.2),0 0px 12px hsl({{border_colour}},100%, 50%)">
           <h3 class="title">{{post.title}}</h3>
           <h4 class="date">{{post.date | date: "%-d %B, %Y"}}</h4>
           <p class="preview">{{post.preview}}</p>
           <a class="link" href="{{post.url}}"><p>Read more</p></a>
         </div>
+        {% assign border_colour = border_colour | plus: 30 %}
         {% endfor %}
       </div>
     </div>
