--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>{{page.category_name}}</title>
+    <title>Josh Fayer Blog | {{ page.tag | replace: '-', ' ' }}</title>
     {% include general.html %}
   </head>
   <body>
