added fixed navbar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable-sm navbar-light bg-light">
+<nav class="navbar fixed-top material-shadow navbar-toggleable-sm navbar-light bg-light">
   <a class="navbar-brand" href="/">Josh Fayer's Blog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainnav" aria-controls="mainnav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
