--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -26,5 +26,6 @@
       </div>
     </div>
   </div>
+  <script src="{{'/js/scripts.js' | prepend: site.baseurl}}" charset="utf-8"></script>
   </body>
 </html>
