--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -15,7 +15,7 @@
       <h1 class="sectionheader">{{page.tag | replace: '-', ' ' }}</h1>
       <div class="blog-list">
         {% for post in site.categories[page.tag] %}
-        <div class="post" style=" box-shadow: 0px 0px 12px rgba(0,0,0,0.2),0 0px 12px hsl({{border_colour}},100%, 50%)">
+        <div class="post material-shadow">
           <h3 class="title">{{post.title}}</h3>
           <h4 class="date">{{post.date | date: "%-d %B, %Y"}}</h4>
           <p class="preview">{{post.preview}}</p>
