--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,29 +14,39 @@
     </header>
     <section id="sections">
       <div class="sectionswrapper">
-        {% assign colour = 0 %}
+        {% assign colour = 40 %}
         {% for category in site.categories %}
           <div class="individual-wrapper">
             <a style="background-color: hsl({{colour}},60%,50%)" href="/{{category | first | slugify: 'pretty'}}" class="section">
               <h2>{{category | first | replace: '-', ' '}}</h2>
             </a>
           </div>
-        {% assign colour = colour | plus: 55 %}
+        {% assign colour = colour | plus: 40 %}
         {% endfor %}
       </div>
     </section>
     <section id="feed">
+      <h2 class="sectionheader">Recent Posts</h2>
       {% assign border_colour = 0 %}
       {% for post in site.posts limit:5 %}
         <div class="post material-shadow">
           <h3 class="title">{{post.title}}</h3>
           <h4 class="date">{{post.date | date: "%-d %B, %Y"}}</h4>
+          <div class="line" style="border: solid 1px hsl({{border_colour}},90%,50%)">
+
+          </div>
+          {% if post.img %}
+            <img src="assets/images/{{post.img}}" alt="{{post.alt}}">
+          {% endif %}
           <p class="preview">{{post.preview}}</p>
           <a class="link" href="{{post.url}}"><p>Read more</p></a>
         </div>
         {% assign border_colour = border_colour | plus: 60 %}
       {% endfor %}
     </section>
+    <!-- <section id="#about">
+
+    </section> -->
 
     <script src="{{'/js/scripts.js' | prepend: site.baseurl}}" charset="utf-8"></script>
   </body>
