updated for real this time

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -22,7 +22,7 @@
 
           </div>
           {% if post.img %}
-            <img src="assets/images/{{post.img}}" alt="{{post.alt}}">
+            <img src="/assets/images/{{post.img}}" alt="{{post.alt}}">
           {% endif %}
           <p class="preview">{{post.preview}}</p>
           <a class="link" href="{{post.url}}"><p>Read more</p></a>
