hopefully actually fixed it

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,12 +7,12 @@
 
     <meta property="og:title" content="{{page.title}}">
     <meta property="og:description" content="{{page.preview}}.">
-    <meta property="og:image" content="{{page.image | absolute_url }}">
+    <meta property="og:image" content="{{site.url}}/assets/images/{{page.img}}">
     <meta property="og:url" content="{{page.url | absolute_url}}">
 
     <meta name="twitter:title" content="{{page.title}}">
     <meta name="twitter:description" content="{{page.preview}}">
-    <meta name="twitter:image" content="{{page.image | absolute_url }}">
+    <meta name="twitter:image" content="{{site.url}}/assets/images/{{page.img}}">
     <meta name="twitter:card" content="summary_large_image">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
