added blog #3, added css and links to nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,6 +18,8 @@
           {% endfor%}
         </div>
       </li>
+      <li clas="nav-item"><a class="nav-link" href="https://joshuafayer.com/">My Main Site</a></li>
+      <li clas="nav-item"><a class="nav-link" href="https://portfolio.joshuafayer.com">My Portfolio</a></li>
     </ul>
   </div>
 </nav>
