added scroll depth tracking

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     {% include general.html %}
   </head>
   <body>
+    {% include gtag.html %}
     {% include nav.html %}
     <header id="top">
       <h1>Joshua Fayer's Blog</h1>
