--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -7,6 +7,7 @@
     {% include general.html %}
   </head>
   <body>
+    {% include gtag.html %}
   <div class="container-fluid">
     {% include nav.html %}
     <div id="sectionpage">
