--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,6 +31,7 @@
     {% include general.html %}
   </head>
   <body id="article">
+    {% include gtag.html %}
     {% include nav.html %}
     <div class="articlewrapper material-shadow">
       <div class="articletitle">
